fix z-index which was preventing the login menu from being accessed

--- a/client/sass/app/nav.scss
+++ b/client/sass/app/nav.scss
@@ -4,7 +4,7 @@
 
 .nav, .secondary-nav {
   position: relative;
-  z-index: 5;
+  z-index: 6;
 }
 
 .nav {
